--- a/homework-15/third.html
+++ b/homework-15/third.html
@@ -33,7 +33,7 @@
                         id="phone" 
                         placeholder="For examle: +380123456789"
                         required
-                        pattern="^\+38\(0[0-9]{2}\)[0-9]{3}\-[0-9]{2}\-[0-9]{2}$"
+                        pattern="^\+38\(0[0-9]{2}\)[0-9]{3}-[0-9]{2}-[0-9]{2}$"
                         
                         
 
