--- a/homework-15/index.html
+++ b/homework-15/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container cont">
         <header class="d-flex flex-row p-3">
             <div class="logo mt-2 me-5">
                 <span><i class="fas fa-futbol"></i></span>
@@ -24,8 +24,8 @@
               </nav>
         </header>
         <main>
-            <div class="container w-50 mt-5 border border-dark shadow p-3 mb-5 bg-body rounded">
-                <div class="forma p-5">
+            <div class="form container w-50 mt-5 border border-dark shadow p-3 mb-5 bg-body rounded">
+                <div class="forma p-2">
                     <label for="phone">Please, enter your phone number *</label>
                     <input 
                         type="text"
@@ -33,7 +33,7 @@
                         id="phone" 
                         placeholder="For examle: +380123456789"
                         required
-                        pattern="^\+380[0-9]{9}|\+38\(0[0-9]{2}\)[0-9]{7}|\+38\(0[0-9]{2}\)[0-9]{3}\-[0-9]{2}\-[0-9]{2}$"
+                        pattern="^\+380[0-9]{9}|\+38\(0[0-9]{2}\)[0-9]{7}|\+38\(0[0-9]{2}\)[0-9]{3}-[0-9]{2}-[0-9]{2}$"
                         
                         
 
@@ -53,7 +53,7 @@
                     </div> -->
                 </div>
             </div>
-            <a class="btn btn-primary second-page" href="alternative.html" role="button">Alternative Page</a>
+            <!-- <a class="btn btn-primary second-page" href="alternative.html" role="button">Alternative Page</a> -->
         </main>
     </div>
 </body>
